# R3BRoot

./: CMakeLists.txt
cmake/modules/: FairRootFindPackage2.cmake
fi4/: R3BFi4Digitizer.cxx  R3BFi4Digitizer.h
gconfig/: g4r3bconfig.in
geometry/: glad_v17_flunge.geo.root
land/: R3BLand.cxx
macros/r3b/: r3bsim.C  r3bsim_g4.C  r3bsim_g4r3b.C  r3bsim_gen.C  r3bsim_new.C  run_sim.C
macros/r3b/califa/: r3bsim.C  runsim.C
macros/r3b/califa/TUM/: iPhos_sim.C  sim_p2p_s438b.C  sim_s438b.C
macros/r3b/califa/auto/: r3bsim_batch.C
macros/r3b/geo/: create_glad_geo.C
macros/r3b/land/: run_sim.C
macros/r3b/neuland/matrices/: run.C
macros/r3b/startrack/: r3bsim.C
macros/r3b/test/: testR3BPhaseSpaceGeneratorIntegration.C
macros/r3b/tracking/: r3bsim.C
mq/: CMakeLists.txt  R3BMqDevice.cxx  R3BMqDevice.h  R3BMqSampler.cxx  R3BMqSampler.h  R3BMqSink.cxx  R3BMqSink.h  runR3BDevice.cxx  runR3BSampler.cxx  runR3BSink.cxx  start-fragment-tracker.sh.in
plists/: CMakeLists.txt  R3BPhysicsList.cxx  R3BPhysicsList.h
r3bdata/: CMakeLists.txt
r3bgen/: testR3BPhaseSpaceGenerator.cxx
